# paperless-export

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/paperless_export/: __init__.py  __main__.py  cli.py  embed.py  errors.py  exporter.py  manifest.py  preflight.py  taxview.py
tests/: conftest.py  test_cli.py  test_embed.py  test_exporter.py  test_manifest.py  test_preflight.py  test_taxview.py
